2004-02-22  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/encoder1.cpp: Add extra required include.

2004-02-17  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/QueuedDecoder.cpp, Atlas/Message/QueuedDecoder.h,
	  Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h:
	  Shuffle headers around a little to solve problems in recent
	  gcc.

2004-02-17  Al Riddoch  <alriddoch@zepler.org>

	* Fix detection and flagging for zlib and libbz2.

	* Atlas/Filters/Bzip2.cpp, Atlas/Filters/Bzip2.h, Atlas/Filters/Gzip.h:
	  Fix building of filters. Typos broke it.

	* Atlas/Factory.cpp, Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h,
	  Atlas/Codecs/Packed.cpp, Atlas/Codecs/Packed.h,
	  Atlas/Codecs/XML.cpp, Atlas/Codecs/XML.h, Atlas/Net/Stream.h,
	  Atlas/Objects/loadDefaults.cpp: Remove unnecessary includes
	  and use forward declarations where apropriate.

	* Atlas/Objects/GenerateDecoder.py, Atlas/Objects/gen_cpp.py:
	  Use forward declarations to minimise use of includes in Objects
	  headers.

2004-02-16  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py: Make sure setFooAsList() methods
	  takes arguments as const & rather than by value.

2004-02-16  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Codecs/Utility.h: Eliminate using ..; directives from
	  headers.

	* Atlas/Message/Element.h: Deprecate typedefs inside
	  Element class in favour if similar typedefs in Message
	  namespace. Makes forward declarations easier.

	* Turn off -Werror to allow the deprecation warning.

	* Atlas/Message/DecoderBase.cpp, Atlas/Message/DecoderBase.h,
	  Atlas/Message/MEncoder.cpp, Atlas/Message/MEncoder.h,
	  Atlas/Message/QueuedDecoder.cpp, Atlas/Message/QueuedDecoder.h:
	  Adjust Message layer to use the new typedefs.

	* Atlas/Objects/AttributeInfo.py, Atlas/Objects/GenerateDecoder.py,
	  Atlas/Objects/GenerateObjectFactory.py, Atlas/Objects/common.py,
	  Atlas/Objects/gen_cpp.py, 
	  Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h,